# dourado

./: README.md  pyproject.toml  setup.py
dourado/: __init__.py  check_robots.py  functions.py  get_sitemaps.py  main.py  pages_from_sitemap.py  requirements.txt  sitemap_crawler.py  sitemap_validator.py  start_sitemaps.py  unused_functions.py  utils.py
