[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dourado"
version = "0.1.0"
description = "A tool for crawling, validating, and extracting page URLs from website sitemaps."
readme = "README.md"
authors = [
    { name = "Alex Ruco", email = "alex@ruco.pt" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
scripts = { "dourado" = "dourado.main:main" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
